--- a/note.css
+++ b/note.css
@@ -19,7 +19,7 @@ body.annotation-active {
     position: fixed;
     top: 0px;
     right: 0px;
-    z-index: 10002;
+    z-index: 1001;
     padding: 10px 15px;
     background-color: #007bff;
     color: white;
@@ -130,7 +130,7 @@ body.annotation-active {
     background-color: rgba(248, 215, 218, 0.8);
     color: #721c24;
     border: 1px solid rgba(245, 198, 203, 0.7);
-    padding: 3px;
+    padding: 3px 5px;
     font-size: 14px;
     border-radius: 5px;
     cursor: pointer;
